fix(tree-grid): Fix vertical alignment of Tree Grid item contents for all viewport widths (#3907)
* add flex-shrink to slds-button_icon

--- a/ui/components/button-icons/base/_index.scss
+++ b/ui/components/button-icons/base/_index.scss
@@ -33,6 +33,7 @@
   vertical-align: middle;
   justify-content: center;
   color: $color-text-icon-default;
+  flex-shrink: 0;
 
   @include touch-device {
     @include square($button-icon-boundary-touch);
